Class for UserText textarea.

--- a/r2/r2/templates/usertext.html
+++ b/r2/r2/templates/usertext.html
@@ -138,6 +138,7 @@
       <div>
         <textarea rows="1" cols="1"
                   name="${thing.name}"
+                  class="${thing.textarea_class}"
                   >${keep_space(thing.text)}</textarea>
       </div>
 
