Show how many server seconds the user has paid for.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -6355,6 +6355,13 @@ body:not(.gold) .allminus-link {
     font-size: 16px;
 }
 
+.server-seconds {
+    background-color: #EFF7FF;
+    border: 1px solid #5F99CF;
+    text-align: center;
+    padding: 10px;
+}
+
 .comment-visits-box .title {
     font-weight: bold;
     font-size: 12px;
