--- a/r2/r2/templates/frametoolbar.html
+++ b/r2/r2/templates/frametoolbar.html
@@ -21,7 +21,7 @@
 ###############################################################################
 
 <%! 
-   from r2.lib.template_helpers import static, get_domain, add_sr, panel_size
+   from r2.lib.template_helpers import static, get_domain, add_sr
    from r2.lib.strings import Score
 %>
 
@@ -33,7 +33,7 @@
 <%def name="javascript_run()">
   ${parent.javascript_run()}
   reddit.external_frame = true;
-  toolbar = new toolbar_p("${panel_size('expanded')}", "${panel_size('collapsed')}");
+  toolbar = new toolbar_p();
 </%def>
 
 <%def name="sr_stylesheets()">
