/about/stylesheet: Remove "show default stylesheet" option.
The main stylesheet is written in LESS now and so the raw CSS that's
visible on site is not very human-readable nor is it terribly useful.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -3713,7 +3713,7 @@ ul#image-preview-list .description pre {
 
 
 .sheets { margin-right: 315px; }
-.sheets .col { float: left;  }
+.sheets .col { width: 100%; }
 .sheets .col > div { margin: 0 5px; }
 .sheets .col textarea { width: 100% }
 .sheets .buttons { margin-left: 5px }
