--- a/r2/r2/public/static/css/compact.scss
+++ b/r2/r2/public/static/css/compact.scss
@@ -1287,10 +1287,11 @@ body.toolbar {
 }
 
 .cover {
-    position: absolute;
+    position: fixed;
     left: 0px;
     top: 0px; 
     width: 100%;
+    height: 100%;
     background-color: gray;
     opacity: .3;
     z-index: 1000;
