Update link to self-serve advertising rules on new promoted link page

--- a/r2/r2/templates/promotelinknew.html
+++ b/r2/r2/templates/promotelinknew.html
@@ -41,7 +41,7 @@
       ${text_field(visible=False)}
 
       <div class="rules">
-        By clicking "next" you agree to the&#32;<a href="http://www.reddit.com/wiki/selfservicepromotion">Self Serve Advertising Rules.</a>
+        By clicking "next" you agree to the&#32;<a href="http://www.reddit.com/wiki/selfserve#wiki_online_self_serve_advertising_rules">Self Serve Advertising Rules.</a>
       </div>
 
       <div class="save-button">
