Hide link rank number on comments and profile pages.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -1626,6 +1626,8 @@ a.star { text-decoration: none; color: #ff8b60 }
 
 .rank { overflow: hidden }
 
+.profile-page .link .rank, .single-page .link .rank { display: none; }
+
 .link .midcol {font-weight: bold; font-size: small;}
 
 .link .score.likes   { color: #FF8B60; }
