Increase specificity of compressed links midcol sizing.
To match/override the new rules in linklisting.html.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -721,7 +721,7 @@ ul.flat-vert {text-align: left;}
     overflow: hidden;
 }
 
-.link.compressed .midcol {
+body > .content .link.compressed .midcol {
     width: 15px;
     margin-right: 5px;
 }
