Reword pref option to show self-serve advertising tab.

--- a/r2/r2/templates/prefoptions.html
+++ b/r2/r2/templates/prefoptions.html
@@ -243,7 +243,7 @@
       ${checkbox(_("show link flair"), "show_link_flair")}
       %if c.user.pref_show_promote is not None:
         <br/>
-        ${checkbox(_("show promote tab on front page"), 
+        ${checkbox(_("show self-serve advertising tab on front page"), 
           "show_promote")}
       %endif
     </td>
