Gold partners: October update

--- a/r2/r2/templates/goldinfopage.html
+++ b/r2/r2/templates/goldinfopage.html
@@ -114,7 +114,6 @@
         <h1>${_('Awesome stuff for gold members:')}</h1>
         <ul>
           <li>${partner_item('backblaze', 'data backups<br>(sleep soundly)')}</li>
-          <li>${partner_item('uniqlo', 'cool clothes')}</li>
           <li>${partner_item('goldbely', 'special foods from around the country')}</li>
           <li>${partner_item('empiremayo', 'tasty spreads')}</li>
           <li>${partner_item('betabrand', 'unique online fashions')}</li>
@@ -126,6 +125,8 @@
           <li>${partner_item('ifixit', 'technological rectifications')}</li>
           <li>${partner_item('rover', 'canine accomodation')}</li>
           <li>${partner_item('solrepublic', 'acoustic accoutrements')}</li>
+          <li>${partner_item('homejoy', 'household cleansing')}</li>
+          <li>${partner_item('uberconference', 'conference calls')}</li>
           <li>${partner_item('ups', 'logistics provider and gold supporter')}</li>
         </ul>
     </section>
