--- a/r2/r2/templates/goldpartnerspage.html
+++ b/r2/r2/templates/goldpartnerspage.html
@@ -123,6 +123,15 @@
                    button_dest='https://www.goldbely.com/reddit-gold',
                    button_label='visit Goldbely')}
 
+    ${partner_item('homejoy',
+                   'Claim your code below, then click "redeem now" after verifying availability at http://homejoy.com/foreverclean',
+                   static('gold/partner-homejoy.png'),
+                   img_url='http://homejoy.com/foreverclean',
+                   discussion_link='http://www.reddit.com/r/goldbenefits/comments/1nxmsx/homejoy_household_cleansing/',
+                   description_md='# Homejoy Home Cleaning\n'
+                                  'Professional, high-quality home cleaning. 4 months at $15/hour plus no charge for cleaning supplies.',
+                   button_dest='claim')}
+
     ${partner_item('ifixit',
                    "Claim your code below, then enter it as a Coupon Code in your cart at http://ifixit.com for $20 off a $50+ order.",
                    static('gold/partner-ifixit.png'),
@@ -179,14 +188,14 @@
                                   'Black car service requested via mobile app. $25 off your first ride (valid only in the US).',
                    button_dest='claim')}
 
-    ${partner_item('uniqlo',
-                   "Keep an eye on your reddit PMs, as once a week Uniqlo will be sending out a message to a lucky gold member. Redeem your free prize within 24 hours, and you'll be lookin' snazzy in no time!",
-                   static('gold/partner-uniqlo.png'),
-                   img_url='http://uniqlo.com/us/',
-                   discussion_link='http://www.reddit.com/r/goldbenefits/comments/1g4v1v/uniqlo_clothes_maketh_the_human/',
-                   description_md='# Uniqlo Clothing\n'
-                                  'With our "Golden Tikkit" program, one lucky gold member will be getting some sweet new digs from Uniqlo every week.',
-                   )}
+    ${partner_item('uberconference',
+                   "Claim your code below, then use it as a promo code during the checkout process at http://uberconference.com.",
+                   static('gold/partner-uberconference.png'),
+                   img_url='http://uberconference.com',
+                   discussion_link='http://www.reddit.com/r/goldbenefits/comments/1nxmvh/%C3%BCberconference_conference_calls/',
+                   description_md='# UberConference\n'
+                                  'Conference calling done right. 3 months of premium membership.',
+                   button_dest='claim')}
 
     ${partner_item('urbilis',
                    "Claim your code below, then use it during the second step of the checkout process at http://urbilis.com.",
@@ -228,8 +237,8 @@
         <div id="prize-details">
           <h3>Prize Details</h3>
           <ul>
-            <li>Uniqlo: Once a week until further notice, $50 to $100 in clothing to one lucky winner.</li>
             <li>redditgifts: Once a week until further notice, $20-30 in clothing to five lucky winners.</li>
+            <li>SOL Republic: Once a month until further notice, ~$130 custom headphones to one lucky winner.</li>
           </ul>
         </div>
 
