--- a/r2/r2/templates/printablebuttons.html
+++ b/r2/r2/templates/printablebuttons.html
@@ -255,38 +255,32 @@
 </%def>
 
 <%def name="commentbuttons()">
-  <li class="first">
-    ${self.bylink_button(_("permalink"), thing.permalink)}
-  </li>
-  %if thing.saved:
-    <li class="comment-unsave-button">
-       ${self.state_button("unsave", _("unsave"), "toggle_save(this)", _("save"))}
-    </li>
-  %else:
-    <li class="comment-save-button">
-       ${self.state_button("save", _("save"), "toggle_save(this)", _("unsave"))}
-    </li>
-  %endif
-  %if c.profilepage:
-    <li>
-      ${self.bylink_button(_("context"), thing.permalink + "?context=3")}
-    </li>
+  %if not thing.deleted:
     <li class="first">
-    ${self.comment_button("comment",
-                          _("full comments") + " (%d)" % thing.full_comment_count, 
-                          thing.full_comment_path,
-                          _sr_path = True, 
-                          a_class = None, 
-                          newwindow = thing.new_window)}
+      ${self.bylink_button(_("permalink"), thing.permalink)}
     </li>
-  %endif
-  %if thing.deleted:
-    %if thing.parent_permalink and not thing.profilepage:
-      <li>
-        ${self.bylink_button(_("parent"), thing.parent_permalink)}
+    %if thing.saved:
+      <li class="comment-unsave-button">
+         ${self.state_button("unsave", _("unsave"), "toggle_save(this)", _("save"))}
+      </li>
+    %else:
+      <li class="comment-save-button">
+         ${self.state_button("save", _("save"), "toggle_save(this)", _("unsave"))}
       </li>
     %endif
-  %else:
+    %if c.profilepage:
+      <li>
+        ${self.bylink_button(_("context"), thing.permalink + "?context=3")}
+      </li>
+      <li class="first">
+      ${self.comment_button("comment",
+                            _("full comments") + " (%d)" % thing.full_comment_count, 
+                            thing.full_comment_path,
+                            _sr_path = True, 
+                            a_class = None, 
+                            newwindow = thing.new_window)}
+      </li>
+    %endif
     %if not thing.profilepage:
       %if thing.parent_permalink:
         <li>
