--- a/r2/r2/templates/usertext.html
+++ b/r2/r2/templates/usertext.html
@@ -116,8 +116,10 @@
   <div class="${thing.css_class}">
 %endif
 
-  ##this is set for both editting selftext and creating new comments
-  <input type="hidden" name="thing_id" value="${thing.fullname or ''}"/>
+  %if thing.fullname:
+    ##this is set for both editting selftext and creating new comments
+    <input type="hidden" name="thing_id" value="${thing.fullname}"/>
+  %endif
 
   %if not thing.creating:
     <div class="usertext-body">
