--- a/r2/r2/templates/serversecondsbar.html
+++ b/r2/r2/templates/serversecondsbar.html
@@ -20,9 +20,28 @@
 ## reddit Inc. All Rights Reserved.
 ###############################################################################
 
+<%namespace file="utils.html" import="inline_radio_type"/>
+
 <div class="titlebox">
   <div class="server-seconds rounded">
     ${thing.message}
+    %if thing.is_user:
+    <div class="server-seconds-public bottom">
+      <div class="title">${_("visible to:")}</div>
+      <form id="seconds_visibility_form">
+        ${inline_radio_type("seconds_visibility", "private", _("only me"), checked=not thing.is_public)}
+        ${inline_radio_type("seconds_visibility", "public", _("everyone"), checked=thing.is_public)}
+      </form>
+    </div>
+    %endif
   </div>
 </div>
 
+<script type="text/javascript">
+  $('[name="seconds_visibility"]').click(
+    function () {
+      var form = $('#seconds_visibility_form');
+      post_form(form, 'server_seconds_visibility');
+    }
+  ) 
+</script>
