Show gifts received by the user in ServerSecondsBar.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -6360,6 +6360,10 @@ body:not(.gold) .allminus-link {
     border: 1px solid #5F99CF;
     text-align: center;
     padding: 10px;
+
+    p {
+        padding: 5px 0;
+    }
 }
 
 .server-seconds-public label {
