Gold partners: update Homejoy description

--- a/r2/r2/templates/goldpartnerspage.html
+++ b/r2/r2/templates/goldpartnerspage.html
@@ -129,7 +129,7 @@
                    img_url='http://homejoy.com/foreverclean',
                    discussion_link='http://www.reddit.com/r/goldbenefits/comments/1nxmsx/homejoy_household_cleansing/',
                    description_md='# Homejoy Home Cleaning\n'
-                                  'Professional, high-quality home cleaning. 4 months at $15/hour plus no charge for cleaning supplies.',
+                                  'Professional, high-quality home cleaning. 4 months at $15/hour plus no charge for cleaning supplies on the first visit.',
                    button_dest='claim')}
 
     ${partner_item('ifixit',
