Make gold expiration / gold server seconds boxes consistent.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -6194,8 +6194,8 @@ body:not(.gold) .allminus-link {
 }
 
 .gold-expiration-info {
+    display: block;
     margin: 3px 0;
-    width: 278px;
     text-align: center;
 }
 
@@ -6355,11 +6355,15 @@ body:not(.gold) .allminus-link {
     font-size: 16px;
 }
 
+.gold-expiration-info, .server-seconds {
+    padding: 6px;
+    border-radius: 5px;
+}
+
 .server-seconds {
     background-color: #EFF7FF;
     border: 1px solid #5F99CF;
     text-align: center;
-    padding: 6px;
 
     p {
         padding: 5px 0;
