Embolden gold server seconds metric.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -6368,6 +6368,11 @@ body:not(.gold) .allminus-link {
     p {
         padding: 5px 0;
     }
+
+    em {
+        font-weight: bold;
+        color: #393939;
+    }
 }
 
 .server-seconds-public {
