--- a/r2/r2/templates/comment.html
+++ b/r2/r2/templates/comment.html
@@ -134,6 +134,12 @@ ${parent.collapsed()}
     </a>
   %endif
   ${self.approval_checkmark()}
+  %if getattr(thing, 'savedcategory', None) is not None:
+    ${plain_link(_('category: %s') % thing.savedcategory,
+                 '/user/%s/saved/%s' % (c.user.name, thing.savedcategory),
+                 _class='save-category' + ('' if thing.savedcategory else ' hidden')
+                )}
+  %endif
 </%def>
 
 <%def name="Child()">
